--- a/src/tables/Table.module.scss
+++ b/src/tables/Table.module.scss
@@ -15,8 +15,8 @@
   }
 
   .search {
-    width: 100%;
-    padding: 10px 10px;
+    width: 98%;
+    padding: 1%;
     margin-bottom: 15px;
     border: 1px solid #d1d5db;
     border-radius: 8px;
